--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
+### C++
+#object files
+*.o
+###
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
